exports[`PasswordInput with listeners matches snapshot 1`] = `
<div
  className="input-field col s12">
  <input
    className="validate "
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    type="password" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error="wrong"
    data-success="correct"
    htmlFor="test" />
</div>
`;

exports[`PasswordInput with value matches snapshot 1`] = `
<div
  className="input-field col s12">
  <input
    className=""
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    type="password" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</div>
`;

exports[`PasswordInput without listeners matches snapshot 1`] = `
<div
  className="input-field col s12">
  <input
    className=""
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    type="password" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</div>
`;
